doc/分词终端存储的输出.txt
In [1]: import sys,jieba

In [2]: test_send=('係中國禪宗僧人所編纂之佛教典'
   ...: '籍。編纂者不詳。本文獻未為我國歷代經錄所著錄，亦不為歷代'
   ...: '大藏經所收。現於敦煌遺書中發現，為中國北京圖書館收藏，共兩'
   ...: '號：一號為北殷38號，首尾均殘；另一號為北新1272號，首殘尾'
   ...: '存，有尾題「七祖法寶記下卷」。')

In [3]: words = jieba.cut(test_send)

In [4]: print('/',join(words))
---------------------------------------------------------------------------
NameError                                 Traceback (most recent call last)
<ipython-input-4-bb6334c639ff> in <module>()
----> 1 print('/',join(words))

NameError: name 'join' is not defined

In [5]: print('/'.join(words))
Building prefix dict from the default dictionary ...
Dumping model to file cache /var/folders/m_/dy9xghbn5m1cjzgdpv300xyw0000gn/T/jieba.cache
Loading model cost 1.298 seconds.
Prefix dict has been built succesfully.
係/中國/禪宗/僧人/所/編纂/之/佛教/典籍/。/編纂者/不詳/。/本文/獻未為/我國/歷代經錄/所/著錄/，/亦/不/為/歷代/大藏/經所收/。/現/於/敦煌/遺書中/發現/，/為/中國/北京/圖書館/收藏/，/共/兩號/：/一號/為/北殷/38/號/，/首尾/均/殘/；/另/一號/為/北新/1272/號/，/首殘尾存/，/有尾題/「/七祖法/寶記/下卷/」/。

In [6]: test_send=('係中國禪宗僧人所編纂之佛教典\n'
   ...: '籍。編纂者不詳。本文獻未為我國歷代經錄所著錄，亦不為歷代'
   ...: '大藏經所收。現於敦煌遺書中發現，為中國北京圖書館收藏，共兩'
   ...: '號：一號為北殷38號，首尾均殘；另一號為北新1272號，首殘尾'
   ...: '存，有尾題「七祖法寶記下卷」。')

In [7]: words = jieba.cut(test_send)

In [8]: print('/'.join(words))
係/中國/禪宗/僧人/所/編纂/之/佛教/典/
/籍/。/編纂者/不詳/。/本文/獻未為/我國/歷代經錄/所/著錄/，/亦/不/為/歷代/大藏/經所收/。/現/於/敦煌/遺書中/發現/，/為/中國/北京/圖書館/收藏/，/共/兩號/：/一號/為/北殷/38/號/，/首尾/均/殘/；/另/一號/為/北新/1272/號/，/首殘尾存/，/有尾題/「/七祖法/寶記/下卷/」/。

In [9]: test2 = ('爾時，舍利弗從三昧起，行詣佛所，偏袒[01]右肩，頭面作禮[02]，
   ...: '□…□[03]「無生無滅，無相無為，令人信解。」'
   ...: '「舍利弗！譬如巧畫師，畫□…□[04]師者，為希有不？」')
  File "<ipython-input-9-02f13c7a32a2>", line 1
    test2 = ('爾時，舍利弗從三昧起，行詣佛所，偏袒[01]右肩，頭面作禮[02]，
                                                ^
SyntaxError: EOL while scanning string literal


In [10]: test2 = ('爾時，舍利弗從三昧起，行詣佛所，偏袒[01]右肩，頭面作禮[02]，'
    ...: 
    ...: '□…□[03]「無生無滅，無相無為，令人信解。」'
    ...: '「舍利弗！譬如巧畫師，畫□…□[04]師者，為希有不？」')

In [11]: jieba.cut(test2)
Out[11]: <generator object Tokenizer.cut at 0x105d67360>

In [12]: words2 = jieba.cut(test2)

In [13]: print('/'.join(words))


In [14]: print('/'.join(words2))
爾時/，/舍利/弗/從/三昧/起/，/行詣/佛/所/，/偏袒/[/01/]/右肩/，/頭面/作禮/[/02/]/，/□/…/□/[/03/]/「/無生/無滅/，/無相無為/，/令人/信解/。/」/「/舍利/弗/！/譬如/巧畫師/，/畫/□/…/□/[/04/]/師者/，/為/希有/不/？/」

In [15]: test3=('ZW02n0017_p0133a05_##<p=h1>〔題解〕'
    ...: 'ZW02n0017_p0133a06_##<p,0,2>《七祖法寶記》，禪宗文獻。係中國禪宗僧人所
    ...: 編纂之佛教典'
    ...: 'ZW02n0017_p0133a07_##籍。編纂者不詳。本文獻未為我國歷代經錄所著錄，亦
    ...: 不為歷代'
    ...: 'ZW02n0017_p0133a08_##大藏經所收。現於敦煌遺書中發現，為中國北京圖書館
    ...: 收藏，共兩'
    ...: 'ZW02n0017_p0133a09_##號：一號為北殷38號，首尾均殘；另一號為北新1272號
    ...: ，首殘尾'
    ...: 'ZW02n0017_p0133a10_##存，有尾題「七祖法寶記下卷」。')

In [16]: words3=jieba.cut(test3)

In [17]: print('/'.join(words3))
ZW02n0017/_/p0133a05/_##/</p/=/h1/>/〔/題解/〕/ZW02n0017/_/p0133a06/_##/</p/,/0/,/2/>/《/七祖法/寶記/》/，/禪宗文獻/。/係/中國/禪宗/僧人/所/編纂/之/佛教/典/ZW02n0017/_/p0133a07/_##/籍/。/編纂者/不詳/。/本文/獻未為/我國/歷代經錄/所/著錄/，/亦/不/為/歷代/ZW02n0017/_/p0133a08/_##/大藏/經所收/。/現/於/敦煌/遺書中/發現/，/為/中國/北京/圖書館/收藏/，/共/兩/ZW02n0017/_/p0133a09/_##/號/：/一號/為/北殷/38/號/，/首尾/均/殘/；/另/一號/為/北新/1272/號/，/首殘尾/ZW02n0017/_/p0133a10/_##/存/，/有尾題/「/七祖法/寶記/下卷/」/。

In [18]: words4=('「舍利弗！如來所得阿耨多□…□無為，令人信解，倍'
    ...: '為希有。舍利弗！譬如藕絲懸須彌□…□尊。舍利弗！如來'
    ...: '所說一切諸法，無生無滅，無相無為，令人信□…□無所有，一'
    ...: '切世間所難信解。何以故？是法無想離諸想，無念□…□量所'
    ...: '能得知，無行無相，無有熱惱，無念過諸念，無心過諸心，無向'
    ...: '無背，□…□無說無不說。舍利弗！我此聖法，皆能降伏一'
    ...: '切貪著者、說有者、說□…□者，皆違逆佛，與佛共諍。舍利'
    ...: '弗！乃至於法少許得者，皆與佛諍，與佛□…□。若非我弟'
    ...: '子，即與涅槃共諍，與佛共諍，與法共諍，與僧共諍。舍利弗！如是'
    ...: '見人，□…□利弗！如是見人，我則不聽受一飲水以自供養。'
    ...: '但勤修習無相三昧，於無相三昧亦不取相，□□□達一切諸法'
    ...: '相，皆是一相，所謂無相。」')

In [19]: test4=('「舍利弗！如來所得阿耨多□…□無為，令人信解，倍'
    ...: '為希有。舍利弗！譬如藕絲懸須彌□…□尊。舍利弗！如來'
    ...: '所說一切諸法，無生無滅，無相無為，令人信□…□無所有，一'
    ...: '切世間所難信解。何以故？是法無想離諸想，無念□…□量所'
    ...: '能得知，無行無相，無有熱惱，無念過諸念，無心過諸心，無向'
    ...: '無背，□…□無說無不說。舍利弗！我此聖法，皆能降伏一'
    ...: '切貪著者、說有者、說□…□者，皆違逆佛，與佛共諍。舍利'
    ...: '弗！乃至於法少許得者，皆與佛諍，與佛□…□。若非我弟'
    ...: '子，即與涅槃共諍，與佛共諍，與法共諍，與僧共諍。舍利弗！如是'
    ...: '見人，□…□利弗！如是見人，我則不聽受一飲水以自供養。'
    ...: '但勤修習無相三昧，於無相三昧亦不取相，□□□達一切諸法'
    ...: '相，皆是一相，所謂無相。」')

In [20]: words4=jieba.cut(test4)

In [21]: print('/'.join(words4))
「/舍利/弗/！/如來/所得/阿/耨/多/□/…/□/無為/，/令人/信解/，/倍/為/希有/。/舍利/弗/！/譬如/藕/絲/懸須/彌/□/…/□/尊/。/舍利/弗/！/如來/所/說/一切/諸法/，/無生/無滅/，/無相無為/，/令人/信/□/…/□/無/所有/，/一切/世間/所難/信解/。/何以/故/？/是/法無想/離/諸想/，/無念/□/…/□/量/所能/得知/，/無行/無相/，/無有/熱惱/，/無念過/諸念/，/無心過/諸心/，/無向/無/背/，/□/…/□/無說/無/不/說/。/舍利/弗/！/我此/聖法/，/皆/能/降伏/一切/貪/著者/、/說/有者/、/說/□/…/□/者/，/皆/違逆佛/，/與/佛共諍/。/舍利/弗/！/乃至/於/法少/許得者/，/皆/與/佛/諍/，/與/佛/□/…/□/。/若非/我/弟子/，/即/與/涅槃/共/諍/，/與/佛共諍/，/與/法共/諍/，/與/僧/共/諍/。/舍利/弗/！/如是/見/人/，/□/…/□/利弗/！/如是/見/人/，/我則/不/聽/受/一/飲水以/自供/養/。/但勤/修習/無相/三昧/，/於/無相/三昧/亦/不取/相/，/□/□/□/達/一切/諸/法相/，/皆/是/一相/，/所謂/無相/。/」

In [22]:                                                                        
Do you really want to exit ([y]/n)? y
86:bm-strip me866$ 
